Fixed image to scale with modal. Changed transform: translates to position: relative with bottom property as it is more responsive with resizing the window. Changed button-close position to be top-right with position fixed to image. Added text-shadow to h2 for more contrast.

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,35 +1,33 @@
 .modal {
     background: var(--background-color);
-    height: 80vh;
-    width: 50vw;
+    max-height: 90%;
+    max-width: 55vw;
     align-content: center;
     img {
-        aspect-ratio: 16/9;
-        max-width: 100%;
+        width: 100%;
         opacity: 0.85;
     }
     h2 {
         margin: 0;
         font-size: 50px;
-        text-shadow: 0px 0px 3px var(--primary-color);
+        text-shadow: 0px 0px 5px black;
         color: #FFFFFF;
     }
     padding: 0;
+    border: none;
 }
 
-/* dialog::backdrop {
-    background:salmon;
-} */
 .title-genre-wrapper {
-    transform: translateY(-150%);
+    position: relative;
     width: fit-content;
     margin-left: 30px;
+    bottom: 180px;
 }
 .genres {
     border-radius: 5px;
     display: flex;
     justify-content: flex-start;
-    gap: 5px;
+    gap: 10px;
     .genre {
         color: black;
         width: fit-content;
@@ -40,12 +38,13 @@
         backdrop-filter: blur(20px);
     }
 }
-.movie-cards-button-wrapper {
+.movie-cards-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    transform: translateY(-50%);
-    margin: 30px;
+    margin: 20px 20px 0 20px;
+    position: relative;
+    bottom: 150px;
 }
 .movie-info-wrapper {
     display: flex;
@@ -55,17 +54,27 @@
         border-radius: 5px;
         background-color: rgba(var(--primary-color),0.8);
         backdrop-filter: blur(20px);
-        height: 10vh;
+        height: 12vh;
         width: 8vw;
         text-align: center;
+        .movie-card-text {
+            letter-spacing: .1rem;
+            font-weight: 600;
+        }
     }
 }
 .overview {
-    line-height: 1.35;
+    line-height: 1.25;
+    margin-bottom: 5px;
 }
 .button-close {
-    padding: 10px 15px;
+    position: sticky;
+    bottom: 93%;
+    left: 93%;
+    border: none;
+    padding: 8px 20px;
     border-radius: 5px;
+    font-size: 20px;
     background-color: rgba(var(--primary-color),0.8);
     width: fit-content;
 }
